The UI is now resolution independent

--- a/public/edit.css
+++ b/public/edit.css
@@ -4,3 +4,8 @@ form.edit input[type=file]
 	display: block;
 	margin-bottom: .5em;
 }
+
+.widget-file .preview a {
+	color: inherit;
+	font-size: 64px;
+}
