--- a/public/manage.css
+++ b/public/manage.css
@@ -1,12 +1,22 @@
 @charset "utf-8";
 
-table.manage a.download
+#manager td.cell--size {
+	width: 10ex;
+}
+
+#manager td.cell--download {
+	width: 20px;
+	text-align: center;
+}
+
+#manager a.download {
+	font-size: 16px;
+	vertical-align: middle;
+	text-decoration: none;
+}
+
+#manager a.download:before
 {
-	padding-left: 15px;
-	width: 0;
-	overflow: hidden;
-	display: inline-block;
-	background: url(download.png) no-repeat bottom left;
-	vertical-align: baseline;
-	height: 1em;
+	font-family: FontAwesome;
+	content: "\f019";
 }
